[lib]
proc-macro = true

[dependencies]
syn={version ="2.0", features = ["full", "extra-traits", "visit-mut"]} 
quote="*"
proc-macro2 = "*"
[package]
name = "kaori_hsm_derive"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
