[package]
name = "kaori-hsm-derive"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Mugnier <amugnier@europe.com>"]
repository= "https://github.com/AntoineMugnier/kaori-hsm"
homepage="https://github.com/AntoineMugnier/kaori-hsm"
documentation = "https://docs.rs/kaori-hsm-derive"
categories = ['embedded', "no-std"]
description = "Macros for the kaori-hsm crate"
keywords = ["statechart", "event-driven", "hsm", "state-machine", "embedded"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn={version ="2.0", features = ["full", "extra-traits"]} 
quote="*"
proc-macro2 = "*"


